# meshpy

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nb-clean-config.json  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  beam.py  beam_mesh_old.py  check_imports.py  create_mesh.py  cubit2.py  geometry.py  meshgen.py  pygen.py  pyproject.toml  requirements.in  requirements.txt  rotation.py  setup.py  testing-performance.py  testing.py  vtk-text.py
.binder/: Dockerfile  start
.github/workflows/: build_binder.yml  check_code.yml  check_meshpy_redirects.yml  documentation.yml  github-pages.yml  testing-docker.yml  testing-imcs.yml  testing.yml  testing_protected.yml  website.yml
beamgen/: __init__.py  beam_mesh.py  geometry.py  inputfile.py  rotation.py
code_generation/: rotation.nb
examples/: example_1_finite_rotations.ipynb  example_2_core_mesh_generation_functions.ipynb  examples.py  function_beam.py  straight_beam.py
examples/utils/: __init__.py  example_1_utils.py  general_utils.py
meshgen/: inputfile.py  mesh.py  rotation.py  utility.py
meshpy/: __init__.py  base_mesh_item.py  boundary_condition.py  conf.py  container.py  coupling.py  element.py  element_beam.py  element_solid.py  element_volume.py  find_close_nodes.pyx  find_close_nodes_setup.py  find_close_points.pyx  find_close_points_setup.py  function.py  function_utility.py  geometry_set.py  header_functions.py  inputfile.py  inputfile_utils.py  material.py  mesh.py  node.py  nurbs_patch.py  rotation.py  utility.py  vtk_writer.py
meshpy/FourC/: __init__.py  beam_potential.py
meshpy/abaqus/: __init__.py  beam.py  input_file.py
meshpy/cosserat_curve/: __init__.py  cosserat_curve.py  utility.py  warp_mesh_along_curve.py  warping_along_cosserat_curve.py
meshpy/four_c/: __init__.py  beam_potential.py  beam_to_beam_contact.py  dbc_monitor.py  locsys_condition.py  run_four_c.py  solid_shell_thickness_direction.py
meshpy/geometric_search/: __init__.py  find_close_points.py  find_close_points_cython_lib.pyx  geometric_search_arborx.py  geometric_search_cython.py  geometric_search_cython_lib.pyx  geometric_search_scipy.py
meshpy/geometric_search/src/: CMakeLists.txt  find_close_points.cpp  find_close_points.h  geometric_search.cpp
meshpy/mesh_creation_functions/: __init__.py  beam_basic_geometry.py  beam_curve.py  beam_fd.py  beam_fibers_in_rectangle.py  beam_generic.py  beam_honeycomb.py  beam_nurbs.py  beam_stent.py  beam_wire.py  nurbs_generic.py  nurbs_geometries.py
meshpy/simulation_manager/: __init__.py  batch_template.sh  simulation_manager.py
meshpy/space_time/: beam_to_space_time.py
meshpy/utility_baci/: __init__.py  dbc_monitor.py  utility_baci.py
src/beamme/: __init__.py
src/meshpy/: __init__.py
tests/: __init__.py  conftest.py  conftest_performance_tests.py  conftest_result_comparison.py  coverage.config  coverage_local.config  create_baci_input_tube.py  create_cubit_input.py  meshes_for_testing.py  performance_testing.py  pytest_testing_cosserat_curve.py  test_abaqus.py  test_beamme.py  test_cosserat_curve.py  test_create_cubit_input.py  test_dummy.py  test_examples.py  test_four_c.py  test_four_c_simulation.py  test_function_utilities.py  test_geometric_search.py  test_geometric_search_utils.py  test_header_functions.py  test_input_file_utils.py  test_mesh_creation_functions.py  test_meshpy.py  test_nurbs.py  test_performance.py  test_rotations.py  test_space_time.py  test_tutorial.py  test_utility.py  test_utils_environment.py  test_utils_nodes.py  testing.py  testing_abaqus.py  testing_baci.py  testing_baci_simulation.py  testing_context.py  testing_cosserat_curve.py  (+17 more)
tests/core/: test_core_geometry_set.py
tests/input-solid-mesh/: baci_input_tube_create.py  block-create.sh  block-py.jou  block.bc  block.head  test_meshpy_curve_2d_sin_mathematica.csv  test_meshpy_curve_3d_helix_mathematica.csv  test_meshpy_vtk_solid_reference.vtu  tube-create.sh  tube-py.jou  tube.bc  tube.head  vtk_writer_beam_test_ref.vtu  vtk_writer_solid_test_ref.vtu  vtk_writer_test_ref.vtu
tests/meshpy/: __init__.py
tests/reference-files/: 4C_input_solid_cuboid.4C.yaml  baci_input_tube_create.py  batch_name_reference  batch_name_reference_1  test_abaqus_frame_normal.inp  test_abaqus_frame_normal_and_extra_node.inp  test_abaqus_frame_reference.inp  test_abaqus_helix.inp  test_abaqus_helix_normal.inp  test_abaqus_helix_normal_and_extra_node.inp  test_abaqus_helix_reference.inp  test_beam_to_solid_conditions.4C.yaml  test_beam_to_solid_conditions_full.4C.yaml  test_check_multiple_node_penalty_coupling_reuse.4C.yaml  test_cosserat_curve_centerline.txt  test_cosserat_curve_mesh.4C.yaml  test_cosserat_curve_mesh_transformation.json  test_cosserat_curve_mesh_warp.4C.yaml  test_cosserat_curve_mesh_warp_transform_boundary_conditions.4C.yaml  test_cosserat_curve_translate_and_rotate_pos_full_ref.txt  test_cosserat_curve_translate_and_rotate_pos_half_ref.txt  test_cosserat_curve_translate_and_rotate_q_full_ref.txt  test_cosserat_curve_translate_and_rotate_q_half_ref.txt  test_cosserat_curve_vtk_representation.vtu  test_cosserat_mesh_transformation_pos.json  test_cosserat_mesh_transformation_rot.json  test_create_cubit_input_block.4C.yaml  test_create_cubit_input_solid_shell_blocks.4C.yaml  test_create_cubit_input_solid_shell_dome.4C.yaml  test_create_cubit_input_tube.4C.yaml  test_fluid_element_section.4C.yaml  test_four_c_beam_to_beam_contact.4C.yaml  test_four_c_beam_to_solid.4C.yaml  test_four_c_import_non_consecutive_geometry_sets_dict_import.4C.yaml  test_four_c_import_non_consecutive_geometry_sets_full_import.4C.yaml  test_four_c_locsys_condition.4C.yaml  (+136 more)
tutorial/: 4C_input_solid_tutorial.4C.yaml  __init__.py  tutorial.py
utilities/: arclength.nb  curvature.nb  old_website_data.md
utility/: __init__.py  arclength.nb  check_header.py  curvature.nb  rotation.nb  rotation.wls  testing-performance.py
utils/: arclength.nb  check_python_imports.py
website/: Gemfile  README.md  _config.yml  index.md  requirements.txt
(+171 files in other folders)
