[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "MeshPy"
description = "MeshPy: A general purpose 3D beam finite element input generator"
authors = [{name = "MeshPy Authors"}]
maintainers = [
  {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
  {name = "David Rudlstorfer", email = "david.rudlstorfer@tum.de"},
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "autograd",
  "geomdl",
  "ipykernel",
  "notebook",
  "numpy",
  "numpy-quaternion",
  "pyvista",
  "scipy",
  "splinepy",
  "vtk"
]

dynamic = ["version"]

[project.optional-dependencies]
cubitpy = ["cubitpy@git+https://github.com/imcs-compsim/cubitpy.git@main"]
fourc = ["fourcipp@git+https://github.com/4c-multiphysics/fourcipp.git@main"]
dev = [
  "coverage-badge",
  "coverage",
  "pdoc",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pyvista_utils@git+https://github.com/isteinbrecher/pyvista_utils.git@main",
  "testbook"
]

[project.urls]
Homepage = "https://imcs-compsim.github.io/meshpy/"
Documentation = "https://imcs-compsim.github.io/meshpy/api-documentation/"
Repository = "https://github.com/imcs-compsim/meshpy/"
Issues = "https://github.com/imcs-compsim/meshpy/issues/"

# Tools

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=50 --cov=src/meshpy/" # TODO raise minimum coverage after yaml switch
markers = [
  "fourc: tests in combination with 4C",
  "arborx: tests in combination with ArborX",
  "cubitpy: tests in combination with CubitPy",
  "performance: performance tests of MeshPy"
]
