[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "BeamMe"
description = "BeamMe: A general purpose 3D beam finite element input generator"
authors = [{name = "BeamMe Authors"}]
maintainers = [
  {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
  {name = "David Rudlstorfer", email = "david.rudlstorfer@tum.de"},
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "autograd",
  "geomdl",
  "ipykernel",
  "notebook",
  "numpy",
  "numpy-quaternion",
  "pyvista",
  "scipy",
  "splinepy",
  "vedo==2024.5.2", # Needed as a fix for the splinepy visualization tool gustaf
  "vtk"
]

dynamic = ["version"]

[project.optional-dependencies]
cubitpy = ["cubitpy@git+https://github.com/imcs-compsim/cubitpy.git@main"]
fourc = ["fourcipp@git+https://github.com/4C-multiphysics/fourcipp.git@main"]
dev = [
  "coverage-badge",
  "coverage",
  "pdoc",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "testbook",
  "vistools",
  "xmltodict"
]

[project.urls]
Homepage = "https://beamme-py.github.io/beamme/"
Documentation = "https://beamme-py.github.io/beamme/api-documentation/"
Repository = "https://github.com/beamme-py/beamme/"
Issues = "https://github.com/beamme-py/beamme/issues/"

# Tools

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=90 --cov=src/beamme/"
markers = [
  "fourc: tests in combination with 4C",
  "arborx: tests in combination with ArborX",
  "cubitpy: tests in combination with CubitPy",
  "performance: performance tests"
]
